# zet

./: .envrc  .gitignore  .mcp.json  AGENT.md  CLAUDE.md  Cargo.toml  DEVLOG.md  README.md  TODO.md  cspell.json  dprint.json  esgzonex.md  flake.nix  package.json  test.md
.claude/: settings.json
.helix/: ignore  languages.toml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_interface.rs  main.rs
crates/db/: Cargo.toml  build.rs
crates/db/sql/: 001_init.sql
crates/db/src/: lib.rs
crates/zetlib/: Cargo.toml
crates/zetlib/sql/: 001_init.sql
crates/zetlib/src/: collection.rs  lib.rs  parser.rs  workspace_commands.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  cache-strategy.md  data-model.md  document_data.md  link-resolution.md  technical-challenges.md  terminology.md  why-slugs-over-ids.md
examples/: date_parser_demo.rs  inspect_parser.rs
sql/: 001_init.sql  002_fts.sql
src/: cli.rs  collection.rs  db.rs  lib.rs  main.rs  parser.rs  workspace.rs
src/app/: cli.rs  commands.rs  mod.rs
src/app/cli/: mod.rs
src/app/command_handler/: create.rs  index.rs  init.rs  lsp.rs  mod.rs  parse.rs  query.rs  raw_parse.rs  raw_query.rs
src/core/: collection.rs  date_parser.rs  db.rs  hasher.rs  mod.rs  parser.rs  paths.rs  query.rs  slug.rs  template_engine.rs  types.rs
src/core/parser/: ast_nodes.rs  mod.rs
src/core/types/: document.rs  heading.rs  link.rs  mod.rs  node.rs  tag.rs  task.rs  tests.rs
src/parser/: ast_nodes.rs
tests/: ast_check.rs  create.rs  end_to_end.rs  fts.rs  index.rs  init.rs  query.rs
tests/fixtures/fts-test/: cooking-recipes.md  memory-management.md  python-tutorial.md  rust-programming.md
tests/fixtures/knowledge-base/: custom-title-and-id.md  custom-title-only.md  frontmatter-example.md  heading-hierarchy.md  index.md  links-and-references.md  paragraphs-and-lists.md  tasks-and-checkboxes.md
tests/fixtures/query-test/: alpha.md  beta.md  delta.md  epsilon.md  gamma.md
tests/helpers/: cli.rs  db.rs  mod.rs
tests/input_files/: blockquote.md  codeblock.md  footnote.md  formating.md  heading.md  heading_with_metadata.md  links.md  list-with-checkmark.md  list.md  math.md  paragraphs.md  table.md
tests/snapshots/: ast_check__empty_file.snap  ast_check__input_files.snap  ast_check__input_files@blockquote.md.snap  ast_check__input_files@codeblock.md.snap  ast_check__input_files@empty.md.snap  ast_check__input_files@footnote.md.snap  ast_check__input_files@formating.md.snap  ast_check__input_files@heading.md.snap  ast_check__input_files@heading_with_metadata.md.snap  ast_check__input_files@links.md.snap  ast_check__input_files@list-with-checkmark.md.snap  ast_check__input_files@list.md.snap  ast_check__input_files@math.md.snap  ast_check__input_files@paragraphs.md.snap  ast_check__input_files@table.md.snap
