[package]
name = "zet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = [
  "parsing",
  "formatting",
  "macros",
  "serde",
  "default",
] }
twox-hash = { version = "2.1.1", features = ["xxhash3_64"] }
thiserror = "2.0.12"
sql_minifier = "0.1.5"
ignore = { version = "0.4.23", features = ["simd-accel"] }
rusqlite = { version = "0.36.0", features = [
  "time",
  "uuid",
  "bundled",
  "functions",
] }
rusqlite_migration = "2.2.0"
pulldown-cmark = { version = "0.13.0", features = ["serde", "simd"] }
gray_matter = "0.2.8"
normalize-path = "0.2.1"
resolve-path = "0.1.0"
sea-query = { version = "1.0.0-rc.1", features = [
  "derive",
  "backend-sqlite",
  "with-time",
  "with-json",
] }
deunicode = "1.6.2"
optfield = "0.4.0"

[dev-dependencies]
insta = { version = "1.43.2", features = ["glob", "yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
