[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.36.0",  features = ["bundled", "time", "uuid"] }
rusqlite_migration = "2.2.0"
sql_minifier = "0.1.5"
env_logger = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
