[package]
name = "zetlib"
version = "0.1.0"
edition = "2024"

[dependencies]
sql_minifier.workspace = true
uuid = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
ignore = { workspace = true }
twox-hash = { workspace = true }
pulldown-cmark = { workspace = true }
gray_matter = { workspace = true }
